feat: update favicon and meta tags for improved branding and SEO

--- a/index.html
+++ b/index.html
@@ -2,9 +2,39 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>rule-22</title>
+    <title>Elementary cellular automata</title>
+    <meta
+      name="description"
+      content="An interactive elementary cellular automaton (ECA) visualizer. Explore all 256 rules and share configurations via URL."
+    />
+
+    <!-- Open Graph (Facebook, LinkedIn, etc.) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Elementary cellular automata" />
+    <meta
+      property="og:description"
+      content="An interactive elementary cellular automaton (ECA) visualizer. Explore all 256 rules and share configurations via URL."
+    />
+    <meta property="og:image" content="/share.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Cellular automata preview image" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Elementary cellular automata" />
+    <meta
+      name="twitter:description"
+      content="An interactive elementary cellular automaton (ECA) visualizer. Explore all 256 rules and share configurations via URL."
+    />
+    <meta name="twitter:image" content="/share.jpg" />
+    <meta name="twitter:image:alt" content="Cellular automata preview image" />
     <script>
       (() => {
         try {
